--- a/Module 10 Fundamentals of HTML/my_intro.html
+++ b/Module 10 Fundamentals of HTML/my_intro.html
@@ -7,12 +7,12 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>I am Codingal</h1>
-      I am <i> 2 years old.</i><br>
-      My Address is HSR Layout, Bengaluru.<br>
+    <h1>I am Rutuja</h1>
+      I am <i> 25 years old.</i><br>
+      My Address is Satara, Maharashtra.<br>
       My favourite subjects are <mark>Science</mark>and
       <mark>Maths.</mark><br>
-      My hobbies include Coding and solving problems.<br>
+      My hobbies include Coding and playing Guitar.<br>
       My favourite is quotation is - <br>
       <mark><q>programming is not about what you knew, it is about what you can figure out.</q></mark>
   </body>
